--- a/Bookish/Bookish/Bookish.csproj
+++ b/Bookish/Bookish/Bookish.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bookish.DataAccess\Bookish.DataAccess.csproj">
+      <Project>{2D820E0A-3A31-4851-9E88-2D3A8A583539}</Project>
+      <Name>Bookish.DataAccess</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
